<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/teamButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/gameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/playerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all" />

</LinearLayout>