<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/gameButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newgame" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >
    </LinearLayout>

    <Button
        android:id="@+id/playersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >
    </LinearLayout>

    <Button
        android:id="@+id/statButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stat" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >
    </LinearLayout>
        
    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export" />

</LinearLayout>