<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ИМЯ" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/put" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/attack" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/block" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="@string/error" />
    </LinearLayout>

    <ListView
        android:id="@+id/playersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <!-- Preview: listitem=@layout/player_item -->

    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/teamName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/enemyName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/enemy" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ourScoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+/-" />

        <TextView
            android:id="@+id/ourScoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="25"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/theirScoreText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/theirScoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+/-" />
    </LinearLayout>

</LinearLayout>